--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.1.0",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.2.6",
+    "uuid": "^11.0.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
